Fix #1556 fix auto-detection of dark mode even when it is disabled

--- a/modules/editor/skins/ckeditor/css/default.less
+++ b/modules/editor/skins/ckeditor/css/default.less
@@ -39,7 +39,7 @@
 .light_dark(@cs) when not (@cs = moono-dark) {
 	background-color: #fff;
 	color: #000;
-	&.color_scheme_dark {
+	&.color_scheme_dark.cke_auto_dark_mode {
 		background-color: #333;
 		color: #fff;
 	}
@@ -57,7 +57,7 @@
 	}
 }
 .light_dark_top(@cs) when not (@cs = moono-dark) {
-	.color_scheme_dark & {
+	.color_scheme_dark.cke_auto_dark_mode & {
 		background: #333;
 		border-color: #555;
 		.cke_button_on {
